--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <title>Ahmet ÇELİK - Kişisel Web Sitesi</title>
 </head>
 <body>
-<canvas id="simulator"></canvas>
+<canvas id="simulator" style="z-index: 0;"></canvas>
 <div class="d-flex">
     <div style="border-right: 1px solid #018786;">
         <div class="flex-column d-flex align-items-stretch" style="position: sticky; left: 0px; top: 0px;">
@@ -43,7 +43,7 @@
                 <li class="nav-item mb-4"><a href="#"><img src="img/pp.jpg" alt="Ahmet Çelik Software Enngineering Student" class="img-fluid rounded-circle" style="max-width: 100px;"></a> </a> </li>
                 <li class="nav-item active"><a href="#" class="nav-link"><h6 class="px-1 my-1 text-light"> HAKKIMDA </h6></a></li>
                 <li class="nav-item"><a href="projects.html" class="nav-link"><h6 class="px-1 my-1"> PROJELER </h6></a></li>
-                <li class="nav-item"><a href="AhmetCelikCv.pdf" style="text-decoration: underline;" class="nav-link"><h6 class="px-1 my-1"> CV.pdf </h6></a></li>
+                <li class="nav-item"><a href="AhmetCelikCv.pdf" target="_blank" style="text-decoration: underline;" class="nav-link"><h6 class="px-1 my-1"> CV.pdf </h6></a></li>
             </ul>
             <ul class="list-group-flush navbar-nav icons px-3 align-items-end">
                 <li class="nav-item px-2"><a href="https://www.linkedin.com/in/ahmet-celik-382006175/" target="_blank" class="nav-link zmdi zmdi-linkedin"></a></li>
