background anim changed

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <title>Ahmet ÇELİK - Kişisel Web Sitesi</title>
 </head>
 <body>
-<canvas id="simulator" style="z-index: 0;"></canvas>
-<div class="d-flex">
+<canvas id="simulator"></canvas>
+<div class="d-flex position-absolute">
     <div style="border-right: 1px solid #018786;">
         <div class="flex-column d-flex align-items-stretch" style="position: sticky; left: 0px; top: 0px;">
             <ul class="text-right navbar-nav pt-3 px-3">
