Update linkedin profile

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </a></li>
                 </ul>
                 <ul class="list-group-flush navbar-nav icons px-3 align-items-end">
-                    <li class="nav-item px-2"><a href="https://www.linkedin.com/in/ahmet-celik-382006175/"
+                    <li class="nav-item px-2"><a href="https://www.linkedin.com/in/ahmet-çelik-382006175/"
                             target="_blank" class="nav-link zmdi zmdi-linkedin"></a></li>
                     <li class="nav-item px-2"><a href="https://github.com/ahm3tcelik" target="_blank"
                             class="nav-link zmdi zmdi-github"></a></li>
